# AdventOfCode2025

./: .gitignore  CMakeLists.txt  gen.sh  rsin.sh  template.txt  utils.hpp
.cache/clangd/index/: day10.cc.9D12DBB7B3C236ED.idx  utils.hpp.29B17D2ADC13360C.idx
day1/: day1.cc  day1.cpp
day10/: __program__  day10.cc
day11/: day11.cc
day12/: day12.cc
day2/: day2.cc
day3/: day3.cc
day4/: day4.cc
day5/: day5.cc
day6/: day6.cc
day7/: day7.cc
day8/: day8.cc
day9/: day9.cc
